#589 Fix truncation in tag pane.

--- a/src/stylesheets/components/tag/_list.scss
+++ b/src/stylesheets/components/tag/_list.scss
@@ -114,6 +114,7 @@
 
       .name {
         margin-right: auto;
+        min-width: 0;
       }
 
       .icon-pluscircles {
